try javacOptions